# Gamma-Spectroscopy-Analysis-toolkit-and-peak-Callibration.

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: example_config.toml
docs/: explanation.md  how-to.md  reference.md  tutorial.md
examples/: example_spectrum.csv
gammalib/: __init__.py  analysis.py  calibration.py  cli.py  config.py  fitting.py  io.py  peaks.py  pipeline.py  plotting.py  spectrum.py  synthetic.py
tests/: test_analysis.py  test_calibration.py  test_cli.py  test_config.py  test_fitting.py  test_io.py  test_peaks.py  test_pipeline.py  test_properties.py  test_spectrum.py  test_synthetic.py
