[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-spectroscopy-toolkit"
version = "0.1.0"
description = "A small toolkit for gamma-ray peak analysis and energy calibration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hammad Rasheed" }]
keywords = ["gamma spectroscopy", "peak fitting", "energy calibration", "physics"]

# Only widely-used scientific packages are required. tomllib is used for the
# configuration file and is part of the standard library from Python 3.11.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
# Everything needed to run the test suite and measure coverage.
test = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "coverage>=7.0",
]

[project.scripts]
# Installs a `gamma-toolkit` command that maps to gammalib.cli:main.
gamma-toolkit = "gammalib.cli:main"

[tool.setuptools.packages.find]
include = ["gammalib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["gammalib"]
# The plotting module is intentionally excluded: per the course guidelines,
# pure visualisation code is not unit-tested.
omit = ["gammalib/plotting.py"]
